# ChessEngineRewrite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BitBoards.hpp  BitMath.hpp  Board.hpp  Globals.hpp
src/: BitBoards.cpp  Board.cpp  Movegen.cpp  main.cpp
